--- a/.github/workflows/convert-from-mojang.yml
+++ b/.github/workflows/convert-from-mojang.yml
@@ -1,11 +1,12 @@
 name: Convert Mojang Samples (FSB -> WAV)
+
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}         # 수동 실행 버튼
   push:
-    branches: [ main ]   # 커밋하면 자동 실행도 되게 함
+    branches: [ main ]          # main에 커밋되면 자동 실행
 
 permissions:
-  contents: write
+  contents: write               # 결과를 레포에 커밋하려면 write 필요
 
 jobs:
   convert:
@@ -35,8 +36,9 @@ jobs:
           set -e
           git clone --depth=1 https://github.com/vgmstream/vgmstream.git
           cd vgmstream
-          make -j"$(nproc)" CFLAGS="-O2"
-          cp vgmstream-cli ../vgmstream-cli
+          make -j"$(nproc)" CFLAGS="-O2"           # 라이브러리 빌드
+          make -C cli -j"$(nproc)"                 # 🔹 CLI 바이너리 빌드
+          cp cli/vgmstream-cli ../vgmstream-cli    # 🔹 올바른 경로에서 복사
           cd ..
           ./vgmstream-cli -h || true
 
@@ -44,10 +46,11 @@ jobs:
         run: |
           set -e
           mkdir -p out
+          # 모든 .fsb 순회 후 평탄화된 파일명으로 변환
           find mojang_sounds -type f -name '*.fsb' -print0 | while IFS= read -r -d '' f; do
-            rel="${f#mojang_sounds/}"       # ui/loom/take_result1.fsb
-            noext="${rel%.fsb}"             # ui/loom/take_result1
-            base="${noext//\//.}"           # ui.loom.take_result1
+            rel="${f#mojang_sounds/}"        # ui/loom/take_result1.fsb
+            noext="${rel%.fsb}"              # ui/loom/take_result1
+            base="${noext//\//.}"            # ui.loom.take_result1
             ./vgmstream-cli -D "$f" -o "out/${base}.wav" >/dev/null || true
           done
           ls -l out | head || true
