--- a/.github/workflows/convert-to-ogg.yml
+++ b/.github/workflows/convert-to-ogg.yml
@@ -1,4 +1,4 @@
-name: Convert Mojang FSB to OGG and make manifest
+name: Convert Mojang FSB to WAV (safe mode) and make manifest
 
 on:
   workflow_dispatch: {}
@@ -24,10 +24,10 @@ jobs:
           echo "Sample of fetched files:"
           find mojang_sounds -type f -name '*.fsb' | head
 
-      - name: Install tools (jq, ffmpeg, unzip, curl)
+      - name: Install jq and unzip
         run: |
           sudo apt-get update
-          sudo apt-get install -y jq ffmpeg unzip curl
+          sudo apt-get install -y jq unzip
 
       - name: Download vgmstream CLI (prebuilt linux)
         run: |
@@ -50,59 +50,66 @@ jobs:
             exit 1
           fi
           chmod +x ./vgmstream-cli
+          ./vgmstream-cli -h || true
 
-      - name: Convert FSB -> OGG (libvorbis, quality=4)
+      - name: Convert FSB -> WAV (safe mode, no ffmpeg)
         shell: bash
         run: |
           set -e
           mkdir -p sounds_flat
-          rm -f sounds_flat/*
+          # 테스트로 개수 제한하려면 아래 주석 해제:
+          # LIMIT=50
 
           total=0; ok=0; fail=0
           while IFS= read -r -d '' f; do
-            rel="${f#mojang_sounds/}"                 # ui/loom/take_result1.fsb
-            base="${rel%.*}"                          # ui/loom/take_result1
-            out="sounds_flat/${base}.ogg"
+            rel="${f#mojang_sounds/}"         # ui/loom/take_result1.fsb
+            base="${rel%.*}"                  # ui/loom/take_result1
+            out="sounds_flat/${base}.wav"
             mkdir -p "$(dirname "$out")"
-
-            # vgmstream에서 디코드 → 파이프로 ffmpeg에 넘겨 ogg로 인코드
-            if ./vgmstream-cli -o - "$f" 2>/dev/null | ffmpeg -loglevel error -y -i - -c:a libvorbis -qscale:a 4 "$out"; then
-              echo "OK: $rel -> ${base}.ogg"
-              ok=$((ok+1))
+            echo "Decoding $rel ..."
+            if ./vgmstream-cli -o "$out" "$f" >/dev/null 2>&1; then
+              if [ -s "$out" ]; then
+                echo "OK: $rel -> ${base}.wav"
+                ok=$((ok+1))
+              else
+                echo "SKIP(empty): $rel"
+                rm -f "$out"
+                fail=$((fail+1))
+              fi
             else
-              echo "SKIP: $rel (unsupported codec?)"
-              # 실패한 파일은 건너뛰되, 표시용으로 비워두지 않도록 제거
-              rm -f "$out"
+              echo "SKIP(codec): $rel"
               fail=$((fail+1))
             fi
             total=$((total+1))
+            if [ -n "$LIMIT" ] && [ "$total" -ge "$LIMIT" ]; then
+              echo "Hit LIMIT=$LIMIT, stop early"; break
+            fi
           done < <(find mojang_sounds -type f -name '*.fsb' -print0)
 
           echo "Converted: $ok / $total (failed: $fail)"
-          # 변환 파일만 납작(flat)한 경로로 복사 (중첩 폴더 제거)
-          # -> manifest에서 url만 쓰므로 그대로 유지해도 됨. (현재는 경로 보존)
 
-      - name: Create manifest.json (for the site)
+      - name: Create manifest.json for site (WAV urls)
         shell: bash
         run: |
           set -e
           python3 - <<'PY'
           import os, json
-          items = []
           root = "sounds_flat"
+          items = []
           for dirpath, _, files in os.walk(root):
             for fn in files:
-              if not fn.lower().endswith(".ogg"): continue
+              if not fn.lower().endswith(".wav"): continue
               rel = os.path.join(dirpath, fn).replace("\\","/")
-              rel2 = rel[len(root)+1:]  # ui/loom/take_result1.ogg
-              base = rel2[:-4]          # ui/loom/take_result1
+              rel2 = rel[len(root)+1:]     # ui/loom/take_result1.wav
+              base = rel2[:-4]             # ui/loom/take_result1
               items.append({
                 "id": f"minecraft:{base}",
-                "label": base,                      # 화면에는 접두사 빼고 표시함
-                "url": rel,
-                "type": "ogg"
+                "label": base,
+                "url": rel,                # 브라우저가 직접 받을 경로
+                "type": "wav"
               })
           items.sort(key=lambda x: x["label"])
+          os.makedirs(root, exist_ok=True)
           with open(os.path.join(root, "manifest.json"), "w", encoding="utf-8") as f:
             json.dump(items, f, ensure_ascii=False, indent=2)
           print(f"manifest entries: {len(items)}")
@@ -117,6 +124,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
-            git commit -m "Auto: convert FSB -> OGG and update manifest"
+            git commit -m "Auto: convert FSB -> WAV (safe) and update manifest"
             git push
           fi
