--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -2,23 +2,27 @@ name: Deploy to Firebase Hosting
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ main ] # main 브랜치에 push 시 자동 배포
+  workflow_dispatch:   # 수동 실행도 가능
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # (옵션) Node가 필요하진 않지만, 추후 스크립트 대비
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # Firebase Hosting 배포 액션
+      # Firebase CLI 설치
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      # Firebase Hosting 배포
       - name: Deploy to Firebase Hosting (live)
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -26,3 +30,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PLAYSOUNDLIST }}
           projectId: playsoundlist-b6ba2
           channelId: live
+          siteId: playsoundlist-b6ba2
